tests/semantic/valid/31_e_new_before_class_text.hulk
class A() {
    createB() => new B();
}
class B() {}
print(0);
