tests/semantic/invalid/63_i1_three_way_cycle.hulk
class A is C {}

class B is A {}

class C is B {}
